fix(header): update column gap to use rem units

--- a/src/layouts/InstrumentLayout/components/Header/Header.scss
+++ b/src/layouts/InstrumentLayout/components/Header/Header.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: start;
-  column-gap: 40px;
+  column-gap: 2.5rem;
   width: 100%;
   box-sizing: border-box;
 
